# Stoic

./: .gitignore  LICENSE  README.md
backend/api/: pyproject.toml
backend/api/v1/: pyproject.toml
backend/api/v1/v1/: config.py  main.py
docs/: Analise_requisitos.md  Requirements_analisys.md
docs/Database/: Database-modeling.md
docs/Requirements/: Requirements_analisys.md
frontend/stoic-frontend/: package-lock.json  package.json
