[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Patrick Serra <40740224+PatrickSerra@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
